@@ -20,7 +20,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
-2020-03-27 [B] Failure in include/archive.php due to __constructor() changes {ron4mac}
+2020-04-28 [M] Cosmetic changes/corrections to admin tools, edit pics and contact {heismauri}
+2020-03-27 [B] Failure in include/archive.php due to __construct() changes {ron4mac}
 2020-03-23 [B] Use 'dbcharset' parameter when opening bridged database {ron4mac}
 2020-02-26 [O,M] Simlify log creation and display {ron4mac}
 2020-02-26 [M] Clean up code involved in PHP warnings {ron4mac}
